[package]
name = "rsrss"
version = "0.1.0"
authors = ["Francis Tseng <f+accounts@frnsys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "1.9.0", features = ["from_url"] }
rusqlite = "0.24.1"
# tui = "0.13"
tui = { git = "https://github.com/fdehau/tui-rs" }
termion = "1.5"
html2md = "0.2.10"
webbrowser = "0.5.5"
regex = "1.4.2"
