[package]
name = "rssrs"
version = "0.1.0"
authors = ["Francis Tseng <f+accounts@frnsys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "1.9.0", features = ["from_url"] }
rusqlite = "0.24.1"
# tui = "0.13"
tui = { git = "https://github.com/fdehau/tui-rs" }
termion = "1.5"
# html2md = "0.2.10"
html2md = { git = "https://gitlab.com/frnsys/html2md" }
webbrowser = "0.5.5"
regex = "1.4.2"
chrono = "0.4.19"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
